kubernetes/observability/homarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  labels:
    app: homarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: lenovo
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:latest
          ports:
            - containerPort: 7575
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          volumeMounts:
            - name: appdata
              mountPath: "/appdata"
            - name: docker-sock
              mountPath: "/var/run/docker.sock"
            - name: localtime
              mountPath: "/etc/localtime"
              readOnly: true
            - name: timezone
              mountPath: "/etc/timezone"
              readOnly: true
      volumes:
        - name: appdata
          hostPath:
            path: "/home/chris/services/homarr/homarr/appdata"
            type: DirectoryOrCreate
        - name: docker-sock
          hostPath:
            path: "/var/run/docker.sock"
        - name: localtime
          hostPath:
            path: "/etc/localtime"
        - name: timezone
          hostPath:
            path: "/etc/timezone"
