kubernetes/observability/homarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homarr
spec:
  type: ClusterIP
  selector:
    app: homarr
  ports:
    - port: 7575
      targetPort: 7575
